# Maestria2025-Programacion-local

./: README.md
folder/: fetch-data.py  fileio.py  main.py  proper-motion.py  pyproject.toml  remote_data.py  xcorr2d.py
